--- a/COMP4446_assignment4.ipynb
+++ b/COMP4446_assignment4.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b72a6e2c-e12a-4ab9-8aa0-e2f6ce660d30",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,7 @@
     "import json\n",
     "import torch\n",
     "from torch.utils.data import Dataset, DataLoader\n",
+    "import torch.nn as nn\n",
     "import spacy\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -1548,7 +1549,91 @@
    "id": "94bdecf8-236d-4278-b1b6-895b1afd2637",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 基础 LSTM seq2seq 模型\n",
+    "class Seq2SeqLSTM(nn.Module):\n",
+    "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=100, hidden_dim=256):\n",
+    "        super().__init__()\n",
+    "        # 输入和输出的词嵌入层\n",
+    "        self.encoder_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
+    "        self.encoder = nn.LSTM(emb_dim, hidden_dim, batch_first=True)\n",
+    "\n",
+    "        self.decoder_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
+    "        self.decoder = nn.LSTM(emb_dim, hidden_dim, batch_first=True)\n",
+    "        self.out = nn.Linear(hidden_dim, output_vocab_size)\n",
+    "\n",
+    "    def forward(self, src, tgt):\n",
+    "        # 编码器部分\n",
+    "        src_emb = self.encoder_embedding(src)\n",
+    "        _, (hidden, cell) = self.encoder(src_emb)\n",
+    "\n",
+    "        # 解码器部分\n",
+    "        tgt_emb = self.decoder_embedding(tgt)\n",
+    "        output, _ = self.decoder(tgt_emb, (hidden, cell))\n",
+    "        logits = self.out(output)\n",
+    "        return logits\n",
+    "\n",
+    "\n",
+    "# 带注意力机制的 LSTM seq2seq 模型\n",
+    "class Seq2SeqLSTMWithAttention(nn.Module):\n",
+    "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=100, hidden_dim=256):\n",
+    "        super().__init__()\n",
+    "        self.encoder_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
+    "        self.encoder = nn.LSTM(emb_dim, hidden_dim, batch_first=True)\n",
+    "\n",
+    "        self.decoder_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
+    "        self.decoder = nn.LSTM(emb_dim + hidden_dim, hidden_dim, batch_first=True)\n",
+    "        self.attn = nn.Linear(hidden_dim + emb_dim, hidden_dim)\n",
+    "        self.out = nn.Linear(hidden_dim, output_vocab_size)\n",
+    "\n",
+    "    def forward(self, src, tgt):\n",
+    "        # 处理输入\n",
+    "        src_emb = self.encoder_embedding(src)\n",
+    "        encoder_outputs, (hidden, cell) = self.encoder(src_emb)\n",
+    "\n",
+    "        # 解码器带注意力机制\n",
+    "        tgt_emb = self.decoder_embedding(tgt)\n",
+    "        outputs = []\n",
+    "        for t in range(tgt.size(1)):\n",
+    "            emb_t = tgt_emb[:, t:t+1, :]  # 当前时刻的输入\n",
+    "            # 计算注意力权重\n",
+    "            attn_weights = torch.bmm(emb_t, encoder_outputs.transpose(1, 2))\n",
+    "            attn_weights = torch.softmax(attn_weights, dim=-1)\n",
+    "            context = torch.bmm(attn_weights, encoder_outputs)  # 加权求和\n",
+    "            rnn_input = torch.cat((emb_t, context), dim=-1)  \n",
+    "            output, (hidden, cell) = self.decoder(rnn_input, (hidden, cell))\n",
+    "            logits = self.out(output)  # 输出词预测结果\n",
+    "            outputs.append(logits)\n",
+    "        return torch.cat(outputs, dim=1)\n",
+    "\n",
+    "\n",
+    "# Transformer\n",
+    "class Seq2SeqTransformer(nn.Module):\n",
+    "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=256, num_heads=4, num_layers=2):\n",
+    "        super().__init__()\n",
+    "        # 词嵌入层\n",
+    "        self.src_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
+    "        self.tgt_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
+    "\n",
+    "        # Transformer 模块\n",
+    "        self.transformer = nn.Transformer(\n",
+    "            d_model=emb_dim,\n",
+    "            nhead=num_heads,\n",
+    "            num_encoder_layers=num_layers,\n",
+    "            num_decoder_layers=num_layers,\n",
+    "            dim_feedforward=512,\n",
+    "            dropout=0.1,\n",
+    "            batch_first=True\n",
+    "        )\n",
+    "        self.out = nn.Linear(emb_dim, output_vocab_size)\n",
+    "\n",
+    "    def forward(self, src, tgt):\n",
+    "        src_emb = self.src_embedding(src)\n",
+    "        tgt_emb = self.tgt_embedding(tgt)\n",
+    "        memory = self.transformer.encoder(src_emb)  # 编码输入序列\n",
+    "        output = self.transformer.decoder(tgt_emb, memory)  # 解码目标序列\n",
+    "        return self.out(output)  # 输出词预测结果"
+   ]
   }
  ],
  "metadata": {
