--- a/COMP4446_assignment4.ipynb
+++ b/COMP4446_assignment4.ipynb
@@ -1550,7 +1550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 基础 LSTM seq2seq 模型\n",
+    "# LSTM seq2seq\n",
     "class Seq2SeqLSTM(nn.Module):\n",
     "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=100, hidden_dim=256):\n",
     "        super().__init__()\n",
@@ -1563,18 +1563,18 @@
     "        self.out = nn.Linear(hidden_dim, output_vocab_size)\n",
     "\n",
     "    def forward(self, src, tgt):\n",
-    "        # 编码器部分\n",
+    "        # Encoder\n",
     "        src_emb = self.encoder_embedding(src)\n",
     "        _, (hidden, cell) = self.encoder(src_emb)\n",
     "\n",
-    "        # 解码器部分\n",
+    "        # Decoder\n",
     "        tgt_emb = self.decoder_embedding(tgt)\n",
     "        output, _ = self.decoder(tgt_emb, (hidden, cell))\n",
     "        logits = self.out(output)\n",
     "        return logits\n",
     "\n",
     "\n",
-    "# 带注意力机制的 LSTM seq2seq 模型\n",
+    "# Attention LSTM seq2seq\n",
     "class Seq2SeqLSTMWithAttention(nn.Module):\n",
     "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=100, hidden_dim=256):\n",
     "        super().__init__()\n",
@@ -1587,11 +1587,11 @@
     "        self.out = nn.Linear(hidden_dim, output_vocab_size)\n",
     "\n",
     "    def forward(self, src, tgt):\n",
-    "        # 处理输入\n",
+    "        # Input\n",
     "        src_emb = self.encoder_embedding(src)\n",
     "        encoder_outputs, (hidden, cell) = self.encoder(src_emb)\n",
     "\n",
-    "        # 解码器带注意力机制\n",
+    "        # Attention\n",
     "        tgt_emb = self.decoder_embedding(tgt)\n",
     "        outputs = []\n",
     "        for t in range(tgt.size(1)):\n",
@@ -1615,7 +1615,7 @@
     "        self.src_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
     "        self.tgt_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
     "\n",
-    "        # Transformer 模块\n",
+    "        # Transformer \n",
     "        self.transformer = nn.Transformer(\n",
     "            d_model=emb_dim,\n",
     "            nhead=num_heads,\n",
