modify the generation code

--- a/COMP4446_assignment4.ipynb
+++ b/COMP4446_assignment4.ipynb
@@ -26,7 +26,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from spacy.symbols import ORTH\n",
-    "from torch import nn"
+    "#Change\n",
+    "from collections import Counter, defaultdict"
    ]
   },
   {
@@ -1550,79 +1551,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# LSTM seq2seq\n",
+    "\n",
+    "\n",
+    "def build_seq2seq_pairs(atis_data, var_token_format=\"<{}>\"):\n",
+    "    pairs = []\n",
+    "    for entry in atis_data:\n",
+    "        sql_list = entry.get(\"sql\", [])\n",
+    "        for i, sent in enumerate(entry.get(\"sentences\", [])):\n",
+    "            if i >= len(sql_list):\n",
+    "                continue\n",
+    "            text = sent[\"text\"]\n",
+    "            sql = sql_list[i]\n",
+    "            variables_dict = sent.get(\"variables\", entry.get(\"variables\", {}))\n",
+    "\n",
+    "            for var_name in variables_dict:\n",
+    "                var_type = var_name.rstrip(\"0123456789\")\n",
+    "                placeholder = var_token_format.format(var_type)\n",
+    "                text = text.replace(var_name, placeholder)\n",
+    "                sql = sql.replace(f'\"{var_name}\"', placeholder).replace(var_name, placeholder)\n",
+    "\n",
+    "            src_tokens = text.lower().split()\n",
+    "            tgt_tokens = sql.lower().split()\n",
+    "            pairs.append((src_tokens, tgt_tokens))\n",
+    "    return pairs\n",
+    "\n",
+    "def build_vocab(pairs, special_tokens=[\"<pad>\", \"<sos>\", \"<eos>\", \"<unk>\"]):\n",
+    "    counter = Counter()\n",
+    "    for src, tgt in pairs:\n",
+    "        counter.update(src)\n",
+    "        counter.update(tgt)\n",
+    "    vocab = {tok: i for i, tok in enumerate(special_tokens)}\n",
+    "    for word in counter:\n",
+    "        if word not in vocab:\n",
+    "            vocab[word] = len(vocab)\n",
+    "    return vocab\n",
+    "\n",
+    "def prepare_seq2seq_data(pairs, vocab, sos_token=\"<sos>\", eos_token=\"<eos>\", pad_token=\"<pad>\", unk_token=\"<unk>\"):\n",
+    "    data = []\n",
+    "    sos_id = vocab[sos_token]\n",
+    "    eos_id = vocab[eos_token]\n",
+    "    unk_id = vocab[unk_token]\n",
+    "    for src_tokens, tgt_tokens in pairs:\n",
+    "        src_ids = [vocab.get(tok, unk_id) for tok in src_tokens]\n",
+    "        tgt_ids = [vocab.get(tok, unk_id) for tok in tgt_tokens] + [eos_id]\n",
+    "        tgt_input_ids = [sos_id] + tgt_ids[:-1]\n",
+    "        tgt_output_ids = tgt_ids\n",
+    "        data.append((\n",
+    "            torch.tensor(src_ids, dtype=torch.long),\n",
+    "            torch.tensor(tgt_input_ids, dtype=torch.long),\n",
+    "            torch.tensor(tgt_output_ids, dtype=torch.long)\n",
+    "        ))\n",
+    "    return data\n",
+    "\n",
+    "\n",
+    "\n",
     "class Seq2SeqLSTM(nn.Module):\n",
     "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=100, hidden_dim=256):\n",
     "        super().__init__()\n",
-    "        # 输入和输出的词嵌入层\n",
     "        self.encoder_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
     "        self.encoder = nn.LSTM(emb_dim, hidden_dim, batch_first=True)\n",
-    "\n",
     "        self.decoder_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
     "        self.decoder = nn.LSTM(emb_dim, hidden_dim, batch_first=True)\n",
     "        self.out = nn.Linear(hidden_dim, output_vocab_size)\n",
     "\n",
     "    def forward(self, src, tgt):\n",
-    "        # Encoder\n",
     "        src_emb = self.encoder_embedding(src)\n",
     "        _, (hidden, cell) = self.encoder(src_emb)\n",
-    "\n",
-    "        # Decoder\n",
     "        tgt_emb = self.decoder_embedding(tgt)\n",
     "        output, _ = self.decoder(tgt_emb, (hidden, cell))\n",
     "        logits = self.out(output)\n",
     "        return logits\n",
     "\n",
-    "\n",
-    "# Attention LSTM seq2seq\n",
     "class Seq2SeqLSTMWithAttention(nn.Module):\n",
     "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=100, hidden_dim=256):\n",
     "        super().__init__()\n",
     "        self.encoder_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
     "        self.encoder = nn.LSTM(emb_dim, hidden_dim, batch_first=True)\n",
-    "\n",
     "        self.decoder_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
     "        self.decoder = nn.LSTM(emb_dim + hidden_dim, hidden_dim, batch_first=True)\n",
     "        self.attn = nn.Linear(hidden_dim + emb_dim, hidden_dim)\n",
     "        self.out = nn.Linear(hidden_dim, output_vocab_size)\n",
     "\n",
     "    def forward(self, src, tgt):\n",
-    "        # Input\n",
     "        src_emb = self.encoder_embedding(src)\n",
     "        encoder_outputs, (hidden, cell) = self.encoder(src_emb)\n",
-    "\n",
-    "        # Attention\n",
     "        tgt_emb = self.decoder_embedding(tgt)\n",
     "        outputs = []\n",
+    "        batch_size = src.size(0)\n",
+    "        src_len = src.size(1)\n",
     "        for t in range(tgt.size(1)):\n",
-    "            emb_t = tgt_emb[:, t:t+1, :]  # 当前时刻的输入\n",
-    "            # 计算注意力权重\n",
-    "            attn_weights = torch.bmm(emb_t, encoder_outputs.transpose(1, 2))\n",
-    "            attn_weights = torch.softmax(attn_weights, dim=-1)\n",
-    "            context = torch.bmm(attn_weights, encoder_outputs)  # 加权求和\n",
-    "            rnn_input = torch.cat((emb_t, context), dim=-1)  \n",
+    "            emb_t = tgt_emb[:, t:t+1, :]\n",
+    "            emb_t_exp = emb_t.expand(-1, src_len, -1)\n",
+    "            attn_input = torch.cat((emb_t_exp, encoder_outputs), dim=2)\n",
+    "            energy = self.attn(attn_input)\n",
+    "            attn_weights = torch.softmax(energy.sum(dim=2, keepdim=True), dim=1)\n",
+    "            context = torch.sum(attn_weights * encoder_outputs, dim=1, keepdim=True)\n",
+    "            rnn_input = torch.cat((emb_t, context), dim=-1)\n",
     "            output, (hidden, cell) = self.decoder(rnn_input, (hidden, cell))\n",
-    "            logits = self.out(output)  # 输出词预测结果\n",
+    "            logits = self.out(output)\n",
     "            outputs.append(logits)\n",
     "        return torch.cat(outputs, dim=1)\n",
     "\n",
-    "\n",
-    "# Transformer\n",
     "class Seq2SeqTransformer(nn.Module):\n",
     "    def __init__(self, input_vocab_size, output_vocab_size, emb_dim=256, num_heads=4, num_layers=2):\n",
     "        super().__init__()\n",
-    "        # 词嵌入层\n",
     "        self.src_embedding = nn.Embedding(input_vocab_size, emb_dim)\n",
     "        self.tgt_embedding = nn.Embedding(output_vocab_size, emb_dim)\n",
-    "\n",
-    "        # Transformer \n",
     "        self.transformer = nn.Transformer(\n",
-    "            d_model=emb_dim,\n",
-    "            nhead=num_heads,\n",
+    "            d_model=emb_dim, nhead=num_heads,\n",
     "            num_encoder_layers=num_layers,\n",
     "            num_decoder_layers=num_layers,\n",
-    "            dim_feedforward=512,\n",
-    "            dropout=0.1,\n",
+    "            dim_feedforward=512, dropout=0.1,\n",
     "            batch_first=True\n",
     "        )\n",
     "        self.out = nn.Linear(emb_dim, output_vocab_size)\n",
@@ -1630,9 +1669,100 @@
     "    def forward(self, src, tgt):\n",
     "        src_emb = self.src_embedding(src)\n",
     "        tgt_emb = self.tgt_embedding(tgt)\n",
-    "        memory = self.transformer.encoder(src_emb)  # 编码输入序列\n",
-    "        output = self.transformer.decoder(tgt_emb, memory)  # 解码目标序列\n",
-    "        return self.out(output)  # 输出词预测结果"
+    "        tgt_mask = nn.Transformer.generate_square_subsequent_mask(tgt.size(1)).to(src.device)\n",
+    "        output = self.transformer(src_emb, tgt_emb, tgt_mask=tgt_mask)\n",
+    "        return self.out(output)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def train_seq2seq(model, train_data, loss_fn, optimizer, epochs=10):\n",
+    "    model.train()\n",
+    "    for epoch in range(epochs):\n",
+    "        total_loss = 0\n",
+    "        for src, tgt_in, tgt_out in train_data:\n",
+    "            optimizer.zero_grad()\n",
+    "            logits = model(src.unsqueeze(0).to(device), tgt_in.unsqueeze(0).to(device))\n",
+    "            loss = loss_fn(logits.view(-1, logits.size(-1)), tgt_out.view(-1).to(device))\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            total_loss += loss.item()\n",
+    "        print(f\"Epoch {epoch+1}, Loss: {total_loss:.4f}\")\n",
+    "\n",
+    "def evaluate_seq2seq(model, test_data, pad_idx, device):\n",
+    "    model.eval()\n",
+    "    total_tokens = 0\n",
+    "    correct_tokens = 0\n",
+    "    with torch.no_grad():\n",
+    "        for src, tgt_in, tgt_out in test_data:\n",
+    "            src = src.to(device)\n",
+    "            tgt_in = tgt_in.to(device)\n",
+    "            tgt_out = tgt_out.to(device)\n",
+    "\n",
+    "            logits = model(src.unsqueeze(0), tgt_in.unsqueeze(0))\n",
+    "            preds = logits.argmax(dim=-1).squeeze(0)\n",
+    "            mask = tgt_out != pad_idx\n",
+    "            correct_tokens += (preds == tgt_out).masked_select(mask).sum().item()\n",
+    "            total_tokens += mask.sum().item()\n",
+    "    print(f\"Accuracy: {correct_tokens / total_tokens:.4f}\")\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    print(torch.__version__)\n",
+    "    print(torch.cuda.is_available())\n",
+    "    print(torch.version.cuda)\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    print(\"Using device:\", device)\n",
+    "\n",
+    "    with open(\"atis.json\", \"r\") as f:\n",
+    "        atis_data = json.load(f)\n",
+    "\n",
+    "    all_pairs = build_seq2seq_pairs(atis_data)\n",
+    "\n",
+    "\n",
+    "    question_split = []\n",
+    "    for entry in atis_data:\n",
+    "        sql_list = entry.get(\"sql\", [])\n",
+    "        for i, sentence in enumerate(entry.get(\"sentences\", [])):\n",
+    "            if i >= len(sql_list): continue\n",
+    "            question_split.append((sentence.get(\"question-split\", \"train\"), sentence[\"text\"], sql_list[i]))\n",
+    "\n",
+    "    qs_train = [(q.lower().split(), s.lower().split()) for tag, q, s in question_split if tag == \"train\"]\n",
+    "    qs_test = [(q.lower().split(), s.lower().split()) for tag, q, s in question_split if tag != \"train\"]\n",
+    "\n",
+    "\n",
+    "    query_groups = defaultdict(list)\n",
+    "    for tag, q, s in question_split:\n",
+    "        query_groups[s].append((q, s))\n",
+    "    query_items = list(query_groups.items())\n",
+    "    cutoff = int(len(query_items) * 0.8)\n",
+    "    qs2_train = [(q.lower().split(), s.lower().split()) for s, qs in query_items[:cutoff] for q, s in qs]\n",
+    "    qs2_test = [(q.lower().split(), s.lower().split()) for s, qs in query_items[cutoff:] for q, s in qs]\n",
+    "\n",
+    "    print(\"== Running Question Split ==\")\n",
+    "    vocab = build_vocab(qs_train)\n",
+    "    train_data = prepare_seq2seq_data(qs_train, vocab)\n",
+    "    test_data = prepare_seq2seq_data(qs_test, vocab)\n",
+    "\n",
+    "    for model_cls in [Seq2SeqLSTM, Seq2SeqLSTMWithAttention, Seq2SeqTransformer]:\n",
+    "        print(f\"\\nModel: {model_cls.__name__}\")\n",
+    "        model = model_cls(len(vocab), len(vocab)).to(device)\n",
+    "        loss_fn = nn.CrossEntropyLoss(ignore_index=vocab[\"<pad>\"])\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "        train_seq2seq(model, train_data, loss_fn, optimizer)\n",
+    "        evaluate_seq2seq(model, test_data, pad_idx=vocab[\"<pad>\"], device=device)\n",
+    "\n",
+    "    print(\"\\n== Running Query Split ==\")\n",
+    "    vocab = build_vocab(qs2_train)\n",
+    "    train_data = prepare_seq2seq_data(qs2_train, vocab)\n",
+    "    test_data = prepare_seq2seq_data(qs2_test, vocab)\n",
+    "\n",
+    "    for model_cls in [Seq2SeqLSTM, Seq2SeqLSTMWithAttention, Seq2SeqTransformer]:\n",
+    "        print(f\"\\nModel: {model_cls.__name__}\")\n",
+    "        model = model_cls(len(vocab), len(vocab)).to(device)\n",
+    "        loss_fn = nn.CrossEntropyLoss(ignore_index=vocab[\"<pad>\"])\n",
+    "        optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)\n",
+    "        train_seq2seq(model, train_data, loss_fn, optimizer)\n",
+    "        evaluate_seq2seq(model, test_data, pad_idx=vocab[\"<pad>\"],device = device)\n"
    ]
   }
  ],
